--- a/func_alma_apifetcher/requirements.txt
+++ b/func_alma_apifetcher/requirements.txt
@@ -7,7 +7,7 @@ azure-storage-blob==12.25.1 ; python_version >= "3.11" and python_version < "4.0
 azure-storage-queue==12.12.0 ; python_version >= "3.11" and python_version < "4.0"
 backports-tarfile==1.2.0 ; python_version == "3.11"
 build==1.2.2.post1 ; python_version >= "3.11" and python_version < "4.0"
-cachecontrol==0.14.2 ; python_version >= "3.11" and python_version < "4.0"
+cachecontrol[filecache]==0.14.2 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2025.1.31 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.17.1 ; python_version >= "3.11" and python_version < "4.0"
 charset-normalizer==3.4.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -20,7 +20,7 @@ dulwich==0.22.8 ; python_version >= "3.11" and python_version < "4.0"
 fastjsonschema==2.21.1 ; python_version >= "3.11" and python_version < "4.0"
 filelock==3.18.0 ; python_version >= "3.11" and python_version < "4.0"
 findpython==0.6.3 ; python_version >= "3.11" and python_version < "4.0"
-greenlet==3.2.0 ; python_version >= "3.11" and python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+greenlet==3.2.0 ; python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.11"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.8 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.28.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -38,7 +38,7 @@ markupsafe==3.0.2 ; python_version >= "3.11" and python_version < "4.0"
 more-itertools==10.6.0 ; python_version >= "3.11" and python_version < "4.0"
 msgpack==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.11" and python_version < "4.0"
-pbs-installer==2025.4.9 ; python_version >= "3.11" and python_version < "4.0"
+pbs-installer[download,install]==2025.4.9 ; python_version >= "3.11" and python_version < "4.0"
 pkginfo==1.12.1.2 ; python_version >= "3.11" and python_version < "4.0"
 platformdirs==4.3.7 ; python_version >= "3.11" and python_version < "4.0"
 poetry-core==2.1.2 ; python_version >= "3.11" and python_version < "4.0"
