--- a/func_alma_notifier/pyproject.toml
+++ b/func_alma_notifier/pyproject.toml
@@ -13,7 +13,7 @@ packages = [
 python = "^3.11"
 azure-functions = "^1.18.0"
 pandas = "^2.2.3"
-azure-communication-email = "^1.0.0"
+azure-communication-email = "^1.0.1b1"
 azure-identity = "^1.21.0"
 jinja2 = "^3.1.6"
 
