--- a/func_alma_notifier/requirements.txt
+++ b/func_alma_notifier/requirements.txt
@@ -2,7 +2,7 @@
 alembic==1.15.2 ; python_version >= "3.11" and python_version < "4.0"
 anyio==4.9.0 ; python_version >= "3.11" and python_version < "4.0"
 azure-common==1.1.28 ; python_version >= "3.11" and python_version < "4.0"
-azure-communication-email==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
+azure-communication-email==1.0.1b1 ; python_version >= "3.11" and python_version < "4.0"
 azure-core==1.33.0 ; python_version >= "3.11" and python_version < "4.0"
 azure-functions==1.23.0 ; python_version >= "3.11" and python_version < "4.0"
 azure-identity==1.21.0 ; python_version >= "3.11" and python_version < "4.0"
