poetry version fix for action

--- a/.github/workflows/deploy_functions.yml
+++ b/.github/workflows/deploy_functions.yml
@@ -37,10 +37,20 @@ jobs:
       with:
         python-version: ${{ env.PYTHON_VERSION }}
 
-    - name: Install Poetry
-      run: |
-        pip install poetry
-        poetry --version
+    # - name: Install Poetry # Remove or comment out this old step
+    #   run: |
+    #     pip install poetry
+    #     poetry --version
+
+    - name: Install Poetry # Replace with this action
+      uses: snok/install-poetry@v1 # Use v1 or check for latest release
+      with:
+        # You can specify a version, or use 'latest'
+        version: latest # Or e.g., '1.7.1' if you need a specific version
+        # Optional settings below, defaults are usually fine
+        # virtualenvs-create: false
+        # virtualenvs-in-project: false
+        # installer-parallel: true
 
     - name: Install Dependencies for ${{ matrix.function_dir }}
       run: |
