--- a/.github/workflows/deploy_functions.yml
+++ b/.github/workflows/deploy_functions.yml
@@ -35,29 +35,24 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          # cache: 'pip' # Optional: Enable pip caching
 
       # Install Poetry using pip INTO the main python env setup above
-      - name: Install Poetry via pip
-        run: |
-          pip install --upgrade pip
-          pip install "poetry>=1.7.0" # Pin to a known recent version
-          echo "Verifying pip install:"
-          which poetry || echo "poetry command not found on PATH yet"
-          python -m poetry --version # Verify module access
-          echo "Adding potential user bin path to GITHUB_PATH"
-          echo "$HOME/.local/bin" >> $GITHUB_PATH # Ensure user scripts are on path
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest # Or your desired Poetry 2.x version
+          virtualenvs-create: false
+          virtualenvs-in-project: false
+
+      - name: Install Poetry Export Plugin
+        run: poetry plugin add poetry-plugin-export
 
       # Install dependencies using the now-installed Poetry
       # Poetry should use the current Python environment automatically
       - name: Install Dependencies for ${{ matrix.function_dir }}
         run: |
           cd ${{ matrix.function_dir }}
-          echo "Verifying Poetry command before install:"
-          which poetry
-          poetry --version
-          # No need for --only main if we haven't explicitly configured groups/dev deps yet
-          poetry install --no-interaction --no-root
+          poetry install --no-interaction --no-root  --only main
         # shell: bash # Default
 
       - name: Copy shared_code into ${{ matrix.function_dir }}
