--- a/func_alma_dataprep/pyproject.toml
+++ b/func_alma_dataprep/pyproject.toml
@@ -9,6 +9,10 @@ packages = [
     {include = "shared_code"}
 ]
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
+
+
 [tool.poetry.dependencies]
 python = "^3.11"
 azure-functions = "^1.18.0"
