--- a/func_alma_notifier/pyproject.toml
+++ b/func_alma_notifier/pyproject.toml
@@ -20,6 +20,8 @@ pandas = "^2.2.3"
 azure-communication-email = "^1.0.1b1"
 azure-identity = "^1.21.0"
 jinja2 = "^3.1.6"
+sqlalchemy = "^2.0.40"
+pymysql = "^1.1.1"
 
 # Reference the local shared_code directory
 shared-code = { path = "../shared_code", develop = true }
