--- a/func_alma_apifetcher/pyproject.toml
+++ b/func_alma_apifetcher/pyproject.toml
@@ -18,6 +18,8 @@ poetry-plugin-export = ">=1.8"
 python = "^3.11"
 azure-functions = "^1.23.0"
 sqlalchemy = "^2.0.40"
+pymysql = "^1.1.1"
+requests = "^2.31.0"
 
 # Reference the local shared_code directory
 shared-code = { path = "../shared_code", develop = true }
