--- a/func_alma_dataprep/pyproject.toml
+++ b/func_alma_dataprep/pyproject.toml
@@ -17,6 +17,8 @@ poetry-plugin-export = ">=1.8"
 python = "^3.11"
 azure-functions = "^1.18.0"
 pandas = "^2.2.3"
+sqlalchemy = "^2.0.40"
+pymysql = "^1.1.1"
 
 # Reference the local shared_code directory
 shared-code = { path = "../shared_code", develop = true }
