--- a/func_alma_apifetcher/pyproject.toml
+++ b/func_alma_apifetcher/pyproject.toml
@@ -10,6 +10,10 @@ packages = [
 ]
 
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
+
+
 [tool.poetry.dependencies]
 python = "^3.11"
 azure-functions = "^1.23.0"
