--- a/func_alma_dataprep/pyproject.toml
+++ b/func_alma_dataprep/pyproject.toml
@@ -9,6 +9,9 @@ packages = [
     {include = "shared_code"}
 ]
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
+
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -16,7 +19,6 @@ azure-functions = "^1.18.0"
 pandas = "^2.2.3"
 sqlalchemy = "^2.0.40"
 pymysql = "^1.1.1"
-poetry-plugin-export = ">=1.8.0"
 
 # Reference the local shared_code directory
 shared-code = { path = "../shared_code", develop = true }
