--- a/func_alma_notifier/pyproject.toml
+++ b/func_alma_notifier/pyproject.toml
@@ -9,6 +9,9 @@ packages = [
     {include = "shared_code"}
 ]
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
+
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -19,7 +22,6 @@ azure-identity = "^1.21.0"
 jinja2 = "^3.1.6"
 sqlalchemy = "^2.0.40"
 pymysql = "^1.1.1"
-poetry-plugin-export = ">=1.8.0"
 
 # Reference the local shared_code directory
 shared-code = { path = "../shared_code", develop = true }
