--- a/shared_code/pyproject.toml
+++ b/shared_code/pyproject.toml
@@ -11,6 +11,9 @@ packages = [
     {include = "database"}
 ]
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
+
 
 [tool.poetry.dependencies]
 python = "^3.11"
