--- a/.github/workflows/deploy_functions.yml
+++ b/.github/workflows/deploy_functions.yml
@@ -48,13 +48,12 @@ jobs:
         run: poetry cache clear . --all -n
         shell: bash
 
-      # Install dependencies using the now-installed Poetry
-      # Poetry should use the current Python environment automatically
-      - name: Install Dependencies for ${{ matrix.function_dir }}
+      - name: Validate/Install Base Env for ${{ matrix.function_dir }}
         run: |
           cd ${{ matrix.function_dir }}
-          poetry install --no-interaction --no-root  --only main
-        shell: bash # Default
+          echo "Running poetry install for $(pwd)"
+          poetry install --no-interaction --no-root --sync
+        shell: bash
 
       - name: Copy shared_code into ${{ matrix.function_dir }}
         run: |
@@ -71,6 +70,13 @@ jobs:
           cat requirements.txt
           echo "--- End requirements.txt content ---"
           cd ..
+        shell: bash
+
+      - name: Install packages to .python_packages for ${{ matrix.function_dir }}
+        run: |
+          cd ${{ matrix.function_dir }}
+          echo "Installing packages from requirements.txt into .python_packages for $(pwd)"
+          pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
         shell: bash
 
       - name: Archive function app package ${{ matrix.function_dir }}
@@ -113,21 +119,18 @@ jobs:
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME_FETCHER }}
         package: ./func_alma_apifetcher/func_alma_apifetcher.zip # Path to the downloaded zip artifact
-        scm-do-build-during-deployment: true
 
     - name: Deploy Alma DataPrep Function
       uses: azure/functions-action@v1
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME_DATAPREP }}
         package: ./func_alma_dataprep/func_alma_dataprep.zip # Path to the downloaded zip artifact
-        scm-do-build-during-deployment: true
 
     - name: Deploy Alma Notifier Function
       uses: azure/functions-action@v1
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME_NOTIFIER }}
         package: ./func_alma_notifier/func_alma_notifier.zip # Path to the downloaded zip artifact
-        scm-do-build-during-deployment: true
 
     # Optional: Azure Logout
     # - name: Azure Logout
