--- a/.github/workflows/deploy_functions.yml
+++ b/.github/workflows/deploy_functions.yml
@@ -88,7 +88,6 @@ jobs:
     steps:
     - name: Download all function app artifacts
       uses: actions/download-artifact@v4
-      # Downloads artifacts directly to the root: ./func_alma_apifetcher.zip, etc.
 
     - name: Azure Login
       uses: azure/login@v2
@@ -101,8 +100,7 @@ jobs:
       uses: azure/functions-action@v1
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME_FETCHER }}
-        # **** CORRECTED PATH ****
-        package: ./func_alma_apifetcher.zip
+        package: ./func_alma_apifetcher/func_alma_apifetcher.zip
         scm-do-build-during-deployment: true # Keep this!
 
     - name: Deploy Alma DataPrep Function
@@ -110,15 +108,15 @@ jobs:
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME_DATAPREP }}
         # **** CORRECTED PATH ****
-        package: ./func_alma_dataprep.zip
+        package: ./func_alma_dataprep/func_alma_dataprep.zip
         scm-do-build-during-deployment: true # Keep this!
 
     - name: Deploy Alma Notifier Function
       uses: azure/functions-action@v1
       with:
-        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME_NOTIFIER }} # Check env var name consistency?
+        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME_NOTIFIER }}
         # **** CORRECTED PATH ****
-        package: ./func_alma_notifier.zip
+        package: ./func_alma_notifier/func_alma_notifier.zip
         scm-do-build-during-deployment: true # Keep this!
 
     # Optional: Azure Logout
