--- a/func_alma_dataprep/pyproject.toml
+++ b/func_alma_dataprep/pyproject.toml
@@ -19,6 +19,16 @@ azure-functions = "^1.18.0"
 pandas = "^2.2.3"
 sqlalchemy = "^2.0.40"
 pymysql = "^1.1.1"
+azure-core = "^1.33.0"
+azure-communication-email = "^1.0.1b1"
+azure-storage-blob = "^12.25.1"
+azure-storage-queue = "^12.12.0"
+azure-identity = "^1.21.0"
+jinja2 = "^3.1.6"
+requests = "^2.32.3"
+alembic = "^1.15.2"
+python-dotenv = "^1.1.0"
+
 
 # Reference the local shared_code directory
 shared-code = { path = "../shared_code", develop = true }
