--- a/func_alma_dataprep/pyproject.toml
+++ b/func_alma_dataprep/pyproject.toml
@@ -17,8 +17,8 @@ poetry-plugin-export = ">=1.8"
 python = "^3.11"
 azure-functions = "^1.23.0"
 pandas = "^2.2.3"
-sqlalchemy = "^2.0.40"
-pymysql = "^1.1.1"
+SQLAlchemy = "^2.0.23"  # Add this if it's not already there
+PyMySQL = "^1.1.1"
 azure-core = "^1.33.0"
 azure-communication-email = "^1.0.1b1"
 azure-storage-blob = "^12.25.1"
