--- a/func_alma_apifetcher/pyproject.toml
+++ b/func_alma_apifetcher/pyproject.toml
@@ -17,8 +17,8 @@ poetry-plugin-export = ">=1.8"
 [tool.poetry.dependencies]
 python = "^3.11"
 azure-functions = "^1.23.0"
-sqlalchemy = "^2.0.40"
-pymysql = "^1.1.1"
+SQLAlchemy = "^2.0.23"
+PyMySQL = "^1.1.1"
 requests = "^2.31.0"
 azure-core = "^1.33.0"
 azure-communication-email = "^1.0.1b1"
