--- a/func_alma_notifier/pyproject.toml
+++ b/func_alma_notifier/pyproject.toml
@@ -23,8 +23,8 @@ azure-storage-queue = "^12.12.0"
 azure-identity = "^1.21.0"
 pandas = "^2.2.3"
 jinja2 = "^3.1.6"
-sqlalchemy = "^2.0.40"
-pymysql = "^1.1.1"
+SQLAlchemy = "^2.0.40"
+PyMySQL = "^1.1.1"
 requests = "^2.32.3"
 alembic = "^1.15.2"
 python-dotenv = "^1.1.0"
