--- a/.github/workflows/deploy_functions.yml
+++ b/.github/workflows/deploy_functions.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        function_dir: [ func_alma_apifetcher, func_alma_dataprep, func_alam_notifier ]
+        function_dir: [ func_alma_apifetcher, func_alma_dataprep, func_alma_notifier ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
