--- a/func_alma_apifetcher/pyproject.toml
+++ b/func_alma_apifetcher/pyproject.toml
@@ -31,6 +31,10 @@ alembic = "^1.15.2"
 python-dotenv = "^1.1.0"
 
 
+[tool.poetry.group.dev.dependencies]
+# No dev dependencies for this project
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
