--- a/.github/workflows/deploy_functions.yml
+++ b/.github/workflows/deploy_functions.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          version: latest
+          version: '1.8.2'
           virtualenvs-create: false
           virtualenvs-in-project: false
 
@@ -47,7 +47,7 @@ jobs:
         run: poetry cache clear . --all -n
         shell: bash
 
-      - name: Export requirements.txt for ${{ matrix.function_dir }} (DEBUG)
+      - name: Export requirements.txt for ${{ matrix.function_dir }}
         run: |
           echo "--- Preparing Poetry environment for ${{ matrix.function_dir }} ---"
           cd ${{ matrix.function_dir }}
@@ -55,38 +55,25 @@ jobs:
           echo "--- Running poetry install (for plugins/setup) ---"
           poetry install --no-root --sync
 
-          echo "--- Running Export (DEBUG - Step 1: Verbose Export Only) ---"
-          # Run export with max verbosity, let it write to stdout
-          poetry -vvv export -f requirements.txt --without-hashes --without dev
-          export_exit_code=$? # Capture exit code
-          echo "--- Export Exit Code: $export_exit_code ---"
+          echo "--- Running Export (Excluding shared_code edit line) ---"
+          poetry export -f requirements.txt --output requirements.txt --without-hashes --without dev | grep -v -- "-e file:" > requirements.txt
+          export_exit_code=$? # Capture exit code of the pipeline (due to pipefail)
+
+          echo "--- Pipeline Exit Code: $export_exit_code ---"
           if [ $export_exit_code -ne 0 ]; then
-            echo "!!! Poetry export failed !!!"
-            exit $export_exit_code # Exit the script if export failed
-          fi
-
-          echo "--- Running Export (DEBUG - Step 2: Full Command with Verbose Export) ---"
-          # Now run the full command, still with verbose export
-          poetry -vvv export -f requirements.txt --without-hashes --without dev | grep -v -- "-e file:" > requirements.txt
-          pipeline_exit_code=$? # Capture exit code of the pipeline (due to pipefail)
-          echo "--- Pipeline Exit Code: $pipeline_exit_code ---"
-          if [ $pipeline_exit_code -ne 0 ]; then
             echo "!!! Pipeline (export | grep > file) failed !!!"
-            # Don't exit here yet, let's see the content check
+            echo "--- requirements.txt content on failure ---"
+            cat requirements.txt || echo "requirements.txt not generated or empty on failure"
+            echo "--- End requirements.txt content on failure ---"
+            exit $export_exit_code
           fi
 
-          echo "--- requirements.txt content (DEBUG) ---"
-          cat requirements.txt || echo "requirements.txt might be empty or failed to generate"
-          echo "--- End requirements.txt content (DEBUG) ---"
-          
-          # Verify cryptography is NOT pinned here (should use version from lock file)
+          echo "--- requirements.txt content ---"
+          cat requirements.txt
+          echo "--- End requirements.txt content ---"
+
           echo "--- Checking for manual cryptography pin ---"
           grep "cryptography==" requirements.txt || echo "Cryptography not pinned in requirements.txt (good)"
-
-          # Final check on pipeline exit code
-          if [ $pipeline_exit_code -ne 0 ]; then
-            exit $pipeline_exit_code
-          fi
 
           cd ..
         shell: bash
