--- a/.github/workflows/deploy_functions.yml
+++ b/.github/workflows/deploy_functions.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          version: '1.8.2'
+          version: latest
           virtualenvs-create: false
           virtualenvs-in-project: false
 
