--- a/.github/workflows/deploy_functions.yml
+++ b/.github/workflows/deploy_functions.yml
@@ -57,23 +57,42 @@ jobs:
           which poetry
 
           echo "--- Running poetry install (for plugins/setup) ---"
-          poetry install --no-root --sync # <-- This is where it fails
+          # Consider changing to 'poetry sync' as per deprecation warning, though not the cause of failure
+          poetry install --no-root --sync
 
-          
-          echo "--- Running Export (Excluding shared_code edit line) ---"
-          poetry export -f requirements.txt --output requirements.txt --without-hashes --without dev | grep -v -- "-e file:" > requirements.txt
-          export_exit_code=$? # Capture exit code of the pipeline (due to pipefail)
+          echo "--- Running Export (DEBUG - Isolate Export Command) ---"
+          # Run export directly, redirect output, capture exit code
+          poetry export -f requirements.txt --output temp_requirements.txt --without-hashes --without dev
+          export_exit_code=$?
+          echo "--- Export Exit Code: $export_exit_code ---"
 
-          echo "--- Pipeline Exit Code: $export_exit_code ---"
           if [ $export_exit_code -ne 0 ]; then
-            echo "!!! Pipeline (export | grep > file) failed !!!"
-            echo "--- requirements.txt content on failure ---"
-            cat requirements.txt || echo "requirements.txt not generated or empty on failure"
-            echo "--- End requirements.txt content on failure ---"
-            exit $export_exit_code
+            echo "!!! Poetry export command failed with exit code $export_exit_code !!!"
+            # Try to see if there was any output even on failure
+            echo "--- Output from failed export (if any) ---"
+            cat temp_requirements.txt || echo "No output file generated on failure."
+            echo "--- End output from failed export ---"
+            exit $export_exit_code # Exit the script if export failed
           fi
 
-          echo "--- requirements.txt content ---"
+          echo "--- Export succeeded, now filtering with grep ---"
+          grep -v -- "-e file:" temp_requirements.txt > requirements.txt
+          grep_exit_code=$?
+          echo "--- Grep Exit Code: $grep_exit_code ---"
+
+          if [ $grep_exit_code -ne 0 ] && [ $grep_exit_code -ne 1 ]; then
+             # grep exits 0 if lines were selected, 1 if no lines were selected.
+             # Any other exit code indicates an error.
+            echo "!!! Grep command failed with exit code $grep_exit_code !!!"
+            exit $grep_exit_code
+          elif [ $grep_exit_code -eq 1 ]; then
+             echo "--- Grep Info: No '-e file:' lines found to filter (Exit Code 1 is OK here) ---"
+          fi
+
+          # Clean up temporary file
+          rm temp_requirements.txt
+
+          echo "--- Final requirements.txt content ---"
           cat requirements.txt
           echo "--- End requirements.txt content ---"
 
