--- a/.github/workflows/deploy_functions.yml
+++ b/.github/workflows/deploy_functions.yml
@@ -20,14 +20,13 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         function_dir: [ func_alma_apifetcher, func_alma_dataprep, func_alma_notifier ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        # Fetch all history so Poetry can get path dependency info if needed (though we copy manually)
         with:
           fetch-depth: 0
 
@@ -52,10 +51,6 @@ jobs:
           echo "--- Preparing Poetry environment for ${{ matrix.function_dir }} ---"
           cd ${{ matrix.function_dir }}
 
-          echo "--- Verifying Poetry version BEFORE install ---"
-          poetry --version
-          which poetry
-
           echo "--- Running poetry install (for plugins/setup) ---"
           # Consider changing to 'poetry sync' as per deprecation warning, though not the cause of failure
           poetry install --no-root --sync
@@ -63,31 +58,9 @@ jobs:
           echo "--- Running Export (DEBUG - Isolate Export Command) ---"
           # Run export directly, redirect output, capture exit code
           poetry export -f requirements.txt --output temp_requirements.txt --without-hashes --without dev
-          export_exit_code=$?
-          echo "--- Export Exit Code: $export_exit_code ---"
-
-          if [ $export_exit_code -ne 0 ]; then
-            echo "!!! Poetry export command failed with exit code $export_exit_code !!!"
-            # Try to see if there was any output even on failure
-            echo "--- Output from failed export (if any) ---"
-            cat temp_requirements.txt || echo "No output file generated on failure."
-            echo "--- End output from failed export ---"
-            exit $export_exit_code # Exit the script if export failed
-          fi
 
           echo "--- Export succeeded, now filtering with grep ---"
           grep -v -- "-e file:" temp_requirements.txt > requirements.txt
-          grep_exit_code=$?
-          echo "--- Grep Exit Code: $grep_exit_code ---"
-
-          if [ $grep_exit_code -ne 0 ] && [ $grep_exit_code -ne 1 ]; then
-             # grep exits 0 if lines were selected, 1 if no lines were selected.
-             # Any other exit code indicates an error.
-            echo "!!! Grep command failed with exit code $grep_exit_code !!!"
-            exit $grep_exit_code
-          elif [ $grep_exit_code -eq 1 ]; then
-             echo "--- Grep Info: No '-e file:' lines found to filter (Exit Code 1 is OK here) ---"
-          fi
 
           # Clean up temporary file
           rm temp_requirements.txt
