--- a/func_alma_apifetcher/pyproject.toml
+++ b/func_alma_apifetcher/pyproject.toml
@@ -29,6 +29,7 @@ pandas = "^2.2.3"
 jinja2 = "^3.1.6"
 alembic = "^1.15.2"
 python-dotenv = "^1.1.0"
+cryptography = "43.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
