--- a/func_alma_notifier/pyproject.toml
+++ b/func_alma_notifier/pyproject.toml
@@ -28,6 +28,7 @@ PyMySQL = "^1.1.1"
 requests = "^2.32.3"
 alembic = "^1.15.2"
 python-dotenv = "^1.1.0"
+cryptography = "43.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
